[package]
name = "ybc"
version = "0.5.0-alpha.1"
description = "A Yew component library based on the Bulma CSS framework."
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/thedodd/ybc"
readme = "README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
web-sys = { version = "0.3.69", features = ["Element", "File", "HtmlCollection", "HtmlSelectElement"] }
yew = { version = "0.21", features = ["csr"] }
yew-agent = "0.3"
yew-router = { version = "0.18", optional = true }
wasm-bindgen = "0.2.92"
serde = { version = "1.0.202", features = ["derive"] }

[features]
default = ["router"]
router = ["yew-router"]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
